<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/gallery_root"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <include layout="@layout/gl_root_group"/>

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="gone"/>

    <!--Added by droi Linguanrong for freeme gallery, 16-1-13-->
    <RadioGroup
        android:id="@+id/bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_default_height"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/bottom_tab_camera"
            style="@style/style_RadioButton"
            android:checked="true"
            android:drawableTop="@drawable/tab_camera"
            android:text="@string/tab_by_camera"/>

        <RadioButton
            android:id="@+id/bottom_tab_story"
            style="@style/style_RadioButton"
            android:drawableTop="@drawable/tab_story"
            android:text="@string/tab_by_story"/>

        <RadioButton
            android:id="@+id/bottom_tab_album"
            style="@style/style_RadioButton"
            android:drawableTop="@drawable/tab_all"
            android:text="@string/tab_by_all"/>

        <RadioButton
            android:id="@+id/bottom_tab_community"
            style="@style/style_RadioButton"
            android:drawableTop="@drawable/tab_community"
            android:visibility="gone"
            android:text="@string/tab_by_community"/>
    </RadioGroup>
    <!--Tyd-->
</RelativeLayout>
