<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/freeme_comment_add_comments"
            android:textColor="#2EB3E4"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#5DC3E8"
            />

        <EditText
            android:id="@+id/detail_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/freeme_comment_text_limit"
            android:maxLength="50"
            android:textColor="#000000"
            android:textSize="15dp"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="23dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/secret_mode_cancel"
                android:textColor="#2EB3E4"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/mcontinue"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/secret_mode_confirm"
                android:textColor="#2EB3E4"
                android:textSize="15dp"/>

            <!--
                  Button
                android:id="@+id/cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/ec_net_gprs_cancel"
                android:textSize="20dp" />
            -->
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
