<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"

        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_lockscreen"
            android:visibility="gone"
            style="@style/WallpaperTabLinearLayout">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tab_lockscreen_text"
                    style="@style/WallpaperTabText"
                    android:text="@string/tab_lockscreen_text"/>

                <ImageView
                    style="@style/WallpaperTabSeprator"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/tab_lockscreen_bottom_line"
                style="@style/WallpaperTabBottomLine"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_wallpaper"
            style="@style/WallpaperTabLinearLayout">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tab_wallpaper_text"
                    style="@style/WallpaperTabText"
                    android:text="@string/tab_wallpaper_text"/>

                <ImageView
                    style="@style/WallpaperTabSeprator"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/tab_wallpaper_bottom_line"
                style="@style/WallpaperTabBottomLine"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_all"
            android:visibility="gone"
            style="@style/WallpaperTabLinearLayout">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tab_all_text"
                    style="@style/WallpaperTabText"
                    android:text="@string/tab_all_text"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/tab_all_bottom_line"
                style="@style/WallpaperTabBottomLine"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>